
## PyMiner [1.0.3] - ???

### Key Changes
- **New ores**
    - `Ruby`, `Emerald`.

- **Shop**
    - The place where player can buy items, or have bless to avoid all events.
    - Introduced `ShopAction` and `Deal` class for deals, you can buy in shop.
    - Deals:
        - `GodBlessDeal` - You will have immunity for all events for 10 minings.

- **Updated file structure**
    - `actions.py`, `events.py`, `items.py` was moved to `modules` folder for convenience.

- **Main Menu**
    - Updated choices for new `ShopAction`.
    - Added `GameState.event_defence_counter` to main-menu.

## PyMiner [1.0.2] — 31-01-2026

This release introduces a modular event system that adds randomness, risk, and player choice to the mining loop.

### Key Changes

- **Event System**
    - Added `EventManager` to control random and forced event triggering.
    - Events are triggered based on ``BASIC_EVENT_CHANCE``.
    - Supports weighted random event selection via random.choices.

- **Base Event Architecture**
    - Introduced base `Event` class with a unified lifecycle:
        - UI clear → description → consequence application → result display.
    
    - All effects are applied strictly through `GameStateService`.
        - Example methods: add_money, deduct_money, increase_mining_speed, decrease_mining_speed.

- **Simple Random Events**
    - `TraumaEvent` — randomly decreases mining speed.
    - `LuckyEvent` — grants a random amount of money.
    - `EquipmentFailureEvent` — deducts money for repairs based on current balance.

- **Choice-Based Events**
    - Added `EventWithChoice` abstraction for player-decision events.
    - Input validation (up to 3 attempts).
    - 50/50 chance for good or bad outcomes.
    - Implemented `HelpStrangerEvent`:
        - Choice: help or ignore.
        - Each choice has a pool of positive and negative consequences.

- **Consequence System**
    - Introduced `Consequence` layer to isolate event effects.
    - Implemented concrete consequences: