@@ -27,3 +27,4 @@ CONSQ_EVENT_PRINT_DELAY = 0.1
 # Event
 BASIC_EVENT_CHANCE = 0.2  # 20%
 DECREASE_SPEED_EVENT_AREA = (1, 5)  # 10% - 50%
+LUCKY_EVENT_LUCK_VALUE = 0.5
