@@ -1,1 +1,1 @@
-{"name": "", "money": 0, "inventory": [], "itemcapacity": 2, "miningtime": 3, "eventdefencecounter": 0}
+{"name": "", "money": 0, "inventory": [], "itemcapacity": 2, "miningtime": 3, "eventdefencecounter": 0, "additional_luck": 0}
